--- a/styles/media-fonts.css
+++ b/styles/media-fonts.css
@@ -58,9 +58,6 @@
     height: 476px;
 }
 
-.text_block {
-    width: auto;
-}
   .main-button__1 {
       width: 93%;
       margin: 10px 0;
@@ -79,7 +76,7 @@
   }
   .izo_links {
     background-color: #E3B873;
-    background-image: url('../images/image 2.png');
+
     width: 340;
     height: 241px;
     position: absolute;
@@ -91,6 +88,14 @@
 .izo_links_links {
     display: none;
 
+}
+
+.izo__fon {
+    background-image: url('../images/image 2.png');
+    width: 340px;
+    height: 241px;
+    margin: 36px auto;
+    order: 1;
 }
 
 .section2_title2 {
@@ -112,7 +117,7 @@
     font-weight: 400;
     font-size: 11px;
     line-height: 158.48%;
-
+    margin: 0 30px;
 
     text-align: center;
 
@@ -122,14 +127,16 @@
 .text_block {
     text-align: center;
     /* background-color: aquamarine; */
-    margin: 0 auto;
+
+    width: auto;
+    display: flex;
+    flex-direction: column;
 }
   
 
   .black-container {
       padding-top: 37px;
-      display: flex;
-      flex-direction: column;
+
       
       
   }
@@ -143,5 +150,52 @@
       display: none;
 
   }
+
+
+
+
+  .example-1 {
+    display: flex; 
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 0;
+    order: 2;
+    margin-right: 30px;
+
+ }
+ .example-1-item {
+     width: 40%;
+     height: 100px;
+     margin: 2px;
+    
+ }
+
+ .div__h2 {
+    font-family: 'Yeseva One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 138.6%;
+    /* or 19px */
+    
+    text-transform: uppercase;
+    
+    color: #E3B873;
+    
+ }
+
+ .div__p {
+    font-family: 'Nunito Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 18px;
+    
+    color: #FFFFFF;
+ }
+
+ .izo__links {
+    display: none;
+}
 
 }
