--- a/styles/main.css
+++ b/styles/main.css
@@ -68,7 +68,6 @@
 .main-button__2 {
     background: none;
     border-radius: 2px;
-
     padding: 19px 41px;
     color: white;
     border: 1px solid white;
@@ -141,16 +140,12 @@ button:active {
     grid-template-columns: 250px 200px;
     grid-template-rows: 140px 100px;
     width: 100%;
-    /* outline: 2px dashed #ccc; */
     padding: 0;
  }
- .example-1-item {
 
+ .example-1-item {
      width: 40%;
      height: 100px;
-     /* background: #1a76ff; */
- 
-    
  }
 
  .div__h2 {
@@ -159,12 +154,8 @@ button:active {
     font-weight: 400;
     font-size: 18px;
     line-height: 138.6%;
-    /* or 19px */
-    
     text-transform: uppercase;
-    
     color: #E3B873;
-    
  }
 
  .div__p {
@@ -173,10 +164,20 @@ button:active {
     font-weight: 400;
     font-size: 13px;
     line-height: 21px;
-    
+
     color: #FFFFFF;
  }
 
+.vector__sector2 {
+    display: flex;
+    justify-content: space-around;
+    width: 200px;
+    margin-top: 81px;
+}
+
+.vector__img {
+    filter: brightness(10);
+}
 
 .izo__links {
     margin-left: 120px;
@@ -198,7 +199,6 @@ button:active {
     font-size: 14px;
     text-transform: uppercase;
     color: rgba(255, 255, 255, 0.3);
-    
     text-decoration: none;
     border-bottom: 1px solid #131313;
     
@@ -207,3 +207,6 @@ button:active {
     color: #E3B873;
     border-bottom: 1px solid #E3B873;
 }
+
+
+/* ТРЕТЬЯ СЕКЦИЯ //////////////////////////////////////////////////////////////////////////////// */
