--- a/styles/media-fonts.css
+++ b/styles/media-fonts.css
@@ -96,7 +96,29 @@
     height: 241px;
     margin: 36px auto;
     order: 1;
+    display: flex;
 }
+
+.strelki_div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: auto;
+}
+
+.strelka {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: #E3B873;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .section2_title2 {
     font-family: 'Yeseva One';
@@ -201,5 +223,7 @@
 .vector__sector2 {
     display: none;
 }
+
+
 
 }
