--- a/styles/main.css
+++ b/styles/main.css
@@ -211,7 +211,42 @@ button:active {
 /* ТРЕТЬЯ СЕКЦИЯ //////////////////////////////////////////////////////////////////////////////// */
 
 .section__3 {
-    width: inherit;;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: inherit;
     height: 1070px;
     background-color: #d55f5f;
+}
+
+.section3__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 817px;
+    height: 924px;
+    outline: 3px solid rgb(255, 255, 255);
+    margin-top: -300px
+
+}
+
+.section3__img__div {
+    display: flex;
+    justify-content: space-around;
+    width: 100px;
+}
+
+.title__section3 {
+    font-family: 'Yeseva One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 138.6%;
+    /* or 30px */
+    
+    text-align: center;
+    text-transform: uppercase;
+    
+    color: #FFFFFF;
+    
 }
