--- a/styles/main.css
+++ b/styles/main.css
@@ -873,7 +873,7 @@ button:active {
 
 
 .s7__block {
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
     height: 642px;
 
 }
@@ -925,8 +925,10 @@ color: #363636;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 39px;
-    outline: 1px solid rgb(34, 255, 0);
+    margin-top: 69px;
+    /* outline: 1px solid rgb(34, 255, 0); */
+    height: 450px;
+    position: relative;
 
 }
 
@@ -935,14 +937,88 @@ color: #363636;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
     width: 376px;
     height: 428px;
-    outline: 1px solid red;
+    /* outline: 1px solid rgb(4, 84, 80); */
     display: flex;
     justify-content: center;
     align-items: center;
+   
+
 }
 
 .bottom__into {
     width: 324px;
-    outline: 1px solid black;
-    height: 350px;
+    /* outline: 1px solid black; */
+    height: 400px;
+    
+}
+
+.ava__text {
+    width: inherit;
+    height: 100px;
+    /* outline: 1px solid rgb(226, 15, 173); */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.s7__titile__h3 {
+    font-family: 'Yeseva One';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 23px;
+
+color: #181818;
+width: 150px;
+margin-right: 60px;
+}
+
+.ava {
+    border-radius: 50%;
+    margin-left: 0;
+}
+
+.sam__otziv {
+    font-family: 'Nunito Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 180%;
+/* or 23px */
+
+
+color: #959595;
+}
+
+.otziv__days__div {
+    width: 293px;
+    height: 54px;
+    background-color: #E3B873;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.s7__vector__text {
+    width: auto;
+    /* outline: 1px solid red; */
+    border-right: 1px solid #FFFFFF;
+    height: inherit;
+    width: 50%;
+}
+
+.outline__divs {
+    /* background-color: aquamarine; */
+    position: relative;
+}
+
+.otziv__days__right {
+    width: 50%;
+    /* outline: 1px solid rgb(102, 255, 0); */
+    height: inherit;
 }
